<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <com.painless.glclock.setting.DragPreview
        android:id="@+id/preview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <LinearLayout
        android:id="@+id/lyt_selected_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="-1000dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/widget_editor_info_back"
        android:clickable="true"
        android:onClick="onWidgetSettingsClicked"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_to_edit"
            android:textColor="#FFFFFFFF"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        style="@style/butterbartheme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#88000000"
        android:orientation="horizontal" >

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onResetClicked"
            android:text="@string/wp_reset" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onFinishClicked"
            android:text="@string/wp_finish" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-1000dp"
        android:background="@drawable/widget_settings_back"
        android:clickable="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_title_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_compass"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:alpha="0.8"
                android:src="@drawable/ic_zoom" />

            <SeekBar
                android:id="@+id/seek_zoom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="25" />

            <TextView
                android:id="@+id/txt_zoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="#FFFFFFFF" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/btn_color"
                style="@style/clickable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_color"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/setting_tcolor"
                android:textColor="@android:color/white" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:scaleType="fitXY"
                android:src="@android:drawable/divider_horizontal_dark" />

            <CheckBox
                android:id="@+id/chk_enabled"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enabled" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>